// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TimelineControls /> should pause 1`] = `
.emotion-14 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #808080;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-1 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-5 {
  width: 4px;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  background-color: #191919;
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
  color: #0074f5;
}

.emotion-12 {
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-10"
  >
    <button
      aria-label="Previous Detection"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-1"
        data-file-name="fast-forward.svg"
        height={20}
      />
    </button>
    <button
      aria-label="Previous Second"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-1"
        data-file-name="seek.svg"
        height={20}
      />
    </button>
    <div
      className="emotion-5"
    />
    <button
      aria-label="Pause"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="pause.svg"
        height={20}
      />
    </button>
    <div
      className="emotion-5"
    />
    <button
      aria-label="Next Second"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="seek.svg"
        height={20}
      />
    </button>
    <button
      aria-label="Next Detection"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="fast-forward.svg"
        height={20}
      />
    </button>
  </div>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-11"
    >
      00:00:06
    </div>
    <div
      className="emotion-12"
    >
      / 
      00:00:18
    </div>
  </div>
</div>
`;

exports[`<TimelineControls /> should play 1`] = `
.emotion-14 {
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px;
}

.emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  padding: 4px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #808080;
  background-color: transparent;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #808080;
}

.emotion-2:hover,
.emotion-2.focus-visible:focus {
  background-color: #2e2e2e;
}

.emotion-1 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-5 {
  width: 4px;
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  background-color: #191919;
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
  color: #0074f5;
}

.emotion-12 {
  padding: 4px;
  padding-left: 8px;
  padding-right: 8px;
  white-space: nowrap;
}

<div
  className="emotion-14"
>
  <div
    className="emotion-0"
  />
  <div
    className="emotion-10"
  >
    <button
      aria-label="Previous Detection"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-1"
        data-file-name="fast-forward.svg"
        height={20}
      />
    </button>
    <button
      aria-label="Previous Second"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="emotion-1"
        data-file-name="seek.svg"
        height={20}
      />
    </button>
    <div
      className="emotion-5"
    />
    <button
      aria-label="Play"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="play.svg"
        height={20}
      />
    </button>
    <div
      className="emotion-5"
    />
    <button
      aria-label="Next Second"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="seek.svg"
        height={20}
      />
    </button>
    <button
      aria-label="Next Detection"
      className="emotion-2"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="fast-forward.svg"
        height={20}
      />
    </button>
  </div>
  <div
    className="emotion-13"
  >
    <div
      className="emotion-11"
    >
      00:00:00
    </div>
    <div
      className="emotion-12"
    >
      / 
      00:00:18
    </div>
  </div>
</div>
`;
